# Void_Crew

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  server.toml.example  vcpkg-configuration.json  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: 01-first_iteration.md  02-network_pattern.md  03-technology_stack.md  04-libraries.md  05-conventions.md  06-best_practices.md  07-roadmap.md
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  logging.cpp  logging.hpp  timer.hpp  version.cpp  version.hpp
src/server/: CMakeLists.txt  command_line.cpp  command_line.hpp  game_loop.cpp  game_loop.hpp  main.cpp  server.cpp  server.hpp  server_config.cpp  server_config.hpp  signal_handler.cpp  signal_handler.hpp
tests/: CMakeLists.txt  game_loop_tests.cpp  main.cpp  server_tests.cpp  timer_tests.cpp
tools/: install-hooks.sh  pre-commit
